--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,19 @@
     "@types/react-dom": "^18.2.4",
     "antd": "^5.5.1",
     "dayjs": "^1.11.7",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "firebase": "^9.22.1",
+    "html-to-draftjs": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "remixicon": "^3.3.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "dev": "react-scripts start",
@@ -45,6 +51,11 @@
     ]
   },
   "devDependencies": {
+    "@types/draftjs-to-html": "^0.8.1",
+    "@types/html-to-draftjs": "^1.4.0",
+    "@types/react-draft-wysiwyg": "^1.13.4",
+    "@types/react-query": "^1.2.9",
+    "@types/uuid": "^9.0.2",
     "csstype": "^3.1.2"
   }
 }
