--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,14 @@
     "draftjs-to-html": "^0.9.1",
     "firebase": "^9.22.1",
     "html-to-draftjs": "^1.5.0",
+    "html-to-text": "^9.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
     "remixicon": "^3.3.0",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0"
@@ -53,8 +55,10 @@
   "devDependencies": {
     "@types/draftjs-to-html": "^0.8.1",
     "@types/html-to-draftjs": "^1.4.0",
+    "@types/html-to-text": "^9.0.1",
     "@types/react-draft-wysiwyg": "^1.13.4",
     "@types/react-query": "^1.2.9",
+    "@types/recoil": "^0.0.9",
     "@types/uuid": "^9.0.2",
     "csstype": "^3.1.2"
   }
