--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "mydiary-backend",
   "version": "1.0.0",
   "scripts": {
-    "dev": "set NODE_ENV=development && nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" src/index.ts",
+    "dev": "set NODE_ENV=development && nodemon --watch \"./**/*.ts\" --exec \"ts-node\" src/index.ts",
     "build": "tsc -p .",
     "start": "nodemon dist/index.js"
   },
